# reflect

./: .codecov.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
include/reflect/: object.h  object.hpp  register.h  register.hpp  type.h  type.hpp
include/reflect/detail/: accessor.h  base.h  buffer.h  conversion.h  iterator_range.h  iterator_value.h  property.h  property_accessor.h  storage.h  traits.h  type_info.h  value_accessor.h
src/: type.cpp
src/detail/: accessor.cpp  property.cpp  type_info.cpp
tests/: conversion.cpp  object_access.cpp  object_construct.cpp  property.cpp
tests/common/: classes.h  count.h  main.cpp
